
# Contest abc 165
add_executable(165_a 165/a.cpp)
add_executable(165_b 165/b.cpp)
add_executable(165_c 165/c.cpp)
add_executable(165_d 165/d.cpp)
add_executable(165_e 165/e.cpp)
add_executable(165_f 165/f.cpp)
add_executable(165_test 165/test.cpp)

# Contest abc 168
add_executable(168_a 168/a.cpp)
add_executable(168_b 168/b.cpp)
add_executable(168_c 168/c.cpp)
add_executable(168_d 168/d.cpp)
add_executable(168_e 168/e.cpp)
add_executable(168_f 168/f.cpp)
add_executable(168_test 168/test.cpp)
