
# Contest abc 165
add_executable(165_a 165/a.cpp)
add_executable(165_b 165/b.cpp)
add_executable(165_c 165/c_dfs_good.cpp)
add_executable(165_d 165/d.cpp)
add_executable(165_e 165/e.cpp)
add_executable(165_f 165/f.cpp)
add_executable(165_test 165/test.cpp)

# Contest abc 168
add_executable(168_a 168/a.cpp)
add_executable(168_b 168/b.cpp)
add_executable(168_c 168/c.cpp)
add_executable(168_d 168/d.cpp)
add_executable(168_e 168/e.cpp)
add_executable(168_f 168/f.cpp)
add_executable(168_test 168/test.cpp)

# Contest abc 167
add_executable(167_a 167/a.cpp)
add_executable(167_b 167/b.cpp)
add_executable(167_c 167/c.cpp)
add_executable(167_d 167/d.cpp)
add_executable(167_e 167/e.cpp)
add_executable(167_f 167/f.cpp)

# Contest abc 166
add_executable(166_a 166/a.cpp)
add_executable(166_b 166/b.cpp)
add_executable(166_c 166/c.cpp)
add_executable(166_d 166/d.cpp)
add_executable(166_e 166/e.cpp)
add_executable(166_f 166/f.cpp)

# Contest abc 164
add_executable(164_a 164/a.cpp)
add_executable(164_b 164/b.cpp)
add_executable(164_c 164/c.cpp)
add_executable(164_d 164/d.cpp)
add_executable(164_e 164/e.cpp)
add_executable(164_f 164/f.cpp)

# Contest abc 161
add_executable(161_a 161/a.cpp)
add_executable(161_b 161/b.cpp)
add_executable(161_c 161/c.cpp)
add_executable(161_d 161/d.cpp)
add_executable(161_e 161/e.cpp)
add_executable(161_f 161/f.cpp)

# Contest abc 169
add_executable(169_a 169/a.cpp)
add_executable(169_b 169/b.cpp)
add_executable(169_c 169/c.cpp)
add_executable(169_d 169/d.cpp)
add_executable(169_e 169/e.cpp)
add_executable(169_f 169/f.cpp)
