
# Contest other 20200530
add_executable(20200530_a 20200530/a.cpp)
add_executable(20200530_b 20200530/b.cpp)
add_executable(20200530_c 20200530/c.cpp)
add_executable(20200530_d 20200530/d.cpp)
add_executable(20200530_e 20200530/e.cpp)
add_executable(20200530_f 20200530/f.cpp)

# Contest other marine2020
add_executable(marine2020_a marine2020/a.cpp)
add_executable(marine2020_b marine2020/b.cpp)
add_executable(marine2020_c marine2020/c.cpp)
add_executable(marine2020_d marine2020/d.cpp)
add_executable(marine2020_e marine2020/e.cpp)
add_executable(marine2020_f marine2020/f.cpp)
